[tool.poetry]
name = "langchain-practice"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "langchain_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.224"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
chromadb = "^0.3.26"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
